--- a/index.html
+++ b/index.html
@@ -175,26 +175,26 @@ p.Name, li.Name, div.Name
 </style>
 
 <p class=ContactInfo>
-	https://www.imaginecup.com
+	https://www.hologirl.azurewebsites.net
 </p>
 
 <p class=ContactInfo>
  	<a href="">
- 		mail@email.com
+ 		eva.pardi@hotmail.com
  	</a>
 </p>
 
 <p class=ContactInfo>
-	1 Microsoft Way, Redmond
+	Dortheavej 17, 2, 10
 
 <p class=ContactInfo>
-	USA
+	Copenhagen NV, Denmark
 </p>
 
 <div style='mso-element:para-border-div;border:solid #5C2D91 1.0pt;mso-border-themecolor:accent1;mso-border-alt:solid #5C2D91 .5pt;
  mso-border-themecolor:accent1;padding:4.0pt 6.0pt 4.0pt 6.0pt;background:#5C2D91;mso-background-themecolor:accent1;margin-left:.1in;margin-right:.1in'>
 	<p class=Name>
-		John Doe
+		Eva Pardi
 	</p>
 </div>
 
@@ -210,10 +210,11 @@ p.Name, li.Name, div.Name
 
 <td width=522 valign=top style='width:391.5pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
 	<p class=MsoNormal>
-		Include something about your career goals
+		I want to be an expert in Microsoft Azure and C#.
 	</p>
 	<p class=MsoNormal>
-		Include something about yourself
+		Now I study at KEA, where I mostly learn about JAVA and Networking. During my studies I hold workshops and events for students
+		about Azure, Hour of Code, etc..
 	</p>
 	<p class=MsoNormal>
 	</p>
