--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ p.Name, li.Name, div.Name
   <h2>
   	<span class=MsoPlaceholderText>
   		<span style='color:#404040;mso-themecolor:text1;mso-themetint:191'>
-  			Language
+  			Language Exam
   		</span>
   	</span>
   </h2>
@@ -287,13 +287,16 @@ p.Name, li.Name, div.Name
   		Azure Web Development
   	</p>
     <p class=ResumeText>
+    	C#
+    </p>
+    <p class=ResumeText>
+    	Java
+    </p>
+    <p class=ResumeText>
     	HTML and CSS
     </p>
     <p class=ResumeText>
-    	Javascript
-    </p>
-    <p class=ResumeText>
-    	UX Design
+    	Updated knowledge about most of the Microsoft software
     </p>
   </td>
  </tr>
@@ -313,15 +316,36 @@ p.Name, li.Name, div.Name
   	<span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
   	</span>
      <h2>
-     	Azure Web Developer, Hello Cloud, Seattle, Washington
+     	Webshop Operating Assistant (Budapest, Hungary)
      </h2>
     <p class=ResumeText>
-    	01/01/2015 - 12/12/2015
+    	01.06.12.-28.02.14.
     </p>
     <p class=ResumeText>
-    	List important tasks, accomplishments or skills gained at this job
+    	Professional experiences: operating webshop, managing productlist
     </p>
- 
+    <span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
+  	</span>
+     <h2>
+     	Microsoft Student Partner (Budapest, Hungary)
+     </h2>
+    <p class=ResumeText>
+    	06.05.13. - Present
+    </p>
+    <p class=ResumeText>
+    	Windows Insider, Microsoft Azure development, relations with students and instructors, attend to professional events
+    </p>
+ 	<span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
+  	</span>
+     <h2>
+     	Microsoft Student Partner (Copenhagen, Denmark)
+     </h2>
+    <p class=ResumeText>
+    	01.02.15. - Present
+    </p>
+    <p class=ResumeText>
+    	Microsoft Azure development, BizSpark, Hour of Code, relations with students and instructors, attend to professional events
+    </p>
 
 <tr style='mso-yfti-irow:4'>
   <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
