--- a/index.html
+++ b/index.html
@@ -199,26 +199,104 @@ p.Name, li.Name, div.Name
 </div>
 
 <table class=ResumeTable border=0 cellspacing=0 cellpadding=0 title="Resume text" summary=Resume width="100%" style='width:100.0%;border-collapse:collapse;mso-yfti-tbllook:1184;mso-padding-alt:.1in 0in .1in 0in'>
- <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
+ 
+ 
+<tr style='mso-yfti-irow:4'>
+  <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
   <h1>
-  	Objective
+  	Education
   </h1>
- </td>
+  </td>
+  <td width=31 valign=top style='width:23.6pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
+  </td>
+  <td width=522 valign=top style='width:391.5pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'><span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
+  </span>
+  <h2>
+     	Secondary School, 2005-2009
+     </h2>
+     <p class=MsoNormal>
+     	Bólyai János Gimnázium és Kereskedelmi Szakközépiskola (Ócsa, Hungary)
+     </p>
+	English high level graduate, intermediate language exam
+     <p class=MsoNormal>
+     	IT high level graduate
+     </p>
+     <p class=MsoNormal>
+     	Mathematics high level
+     </p>
+     <h2>
+     	University of Debrecen, Hungary, 2009
+     </h2>
+     <p class=MsoNormal>
+     	Faculty of Informatics, System Engineering
+     </p>
+	Developing skills: C, C++, Visual Basic, Python, LabView, .NET, PHP, HTML, JAVA
+     <p class=MsoNormal>
+     	</p>
+	Measurement and process management specialization
+	<p class=MsoNormal>
+     	
+     </p>
+     <h2>
+     	KEA - Copenhagen School of Design and Technology (Denmark)
+     </h2>
+     <p class=MsoNormal>
+     	Computer Science
+     </p>
+Developing skills: C#, JAVA, JavaScript, Android Game Development
+     <p class=MsoNormal>
+     	Software Design - project management
+     </p>
+    </td>
+ </tr>
 
-<td width=31 valign=top style='width:23.6pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
-</td>
 
-<td width=522 valign=top style='width:391.5pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
-	<p class=MsoNormal>
-		I want to be an expert in Microsoft Azure and C#.
-	</p>
-	<p class=MsoNormal>
-		Now I study at KEA, where I mostly learn about JAVA and Networking. During my studies I hold workshops and events for students
-		about Azure, Hour of Code, etc..
-	</p>
-	<p class=MsoNormal>
-	</p>
-</td>
+<tr style='mso-yfti-irow:3'>
+  <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
+  	<h1>
+  		Work History
+  	</h1>
+  </td>
+  <td width=31 valign=top style='width:23.6pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
+  	<p class=MsoNormal>
+  	</p>
+  </td>
+  <td width=522 valign=top style='width:391.5pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;
+  mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
+  	<span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
+  	</span>
+     <h2>
+     	Webshop Operating Assistant (Budapest, Hungary)
+     </h2>
+    <p class=ResumeText>
+    	01.06.12.-28.02.14.
+    </p>
+    <p class=ResumeText>
+    	Professional experiences: operating webshop, managing productlist
+    </p>
+    <span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
+  	</span>
+     <h2>
+     	Microsoft Student Partner (Budapest, Hungary)
+     </h2>
+    <p class=ResumeText>
+    	06.05.13. - Present
+    </p>
+    <p class=ResumeText>
+    	Windows Insider, Microsoft Azure development, relations with students and instructors, attend to professional events
+    </p>
+ 	<span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
+  	</span>
+     <h2>
+     	Microsoft Student Partner (Copenhagen, Denmark)
+     </h2>
+    <p class=ResumeText>
+    	01.02.15. - Present
+    </p>
+    <p class=ResumeText>
+    	Microsoft Azure development, BizSpark, Hour of Code, relations with students and instructors, attend to professional events
+    </p>
+
 
 <tr style='mso-yfti-irow:1'>
   <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
@@ -299,77 +377,30 @@ p.Name, li.Name, div.Name
     	Updated knowledge about most of the Microsoft software
     </p>
   </td>
- </tr>
-
-<tr style='mso-yfti-irow:3'>
-  <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
-  	<h1>
-  		Work History
-  	</h1>
-  </td>
-  <td width=31 valign=top style='width:23.6pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
-  	<p class=MsoNormal>
-  	</p>
-  </td>
-  <td width=522 valign=top style='width:391.5pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;
-  mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
-  	<span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
-  	</span>
-     <h2>
-     	Webshop Operating Assistant (Budapest, Hungary)
-     </h2>
-    <p class=ResumeText>
-    	01.06.12.-28.02.14.
-    </p>
-    <p class=ResumeText>
-    	Professional experiences: operating webshop, managing productlist
-    </p>
-    <span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
-  	</span>
-     <h2>
-     	Microsoft Student Partner (Budapest, Hungary)
-     </h2>
-    <p class=ResumeText>
-    	06.05.13. - Present
-    </p>
-    <p class=ResumeText>
-    	Windows Insider, Microsoft Azure development, relations with students and instructors, attend to professional events
-    </p>
- 	<span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
-  	</span>
-     <h2>
-     	Microsoft Student Partner (Copenhagen, Denmark)
-     </h2>
-    <p class=ResumeText>
-    	01.02.15. - Present
-    </p>
-    <p class=ResumeText>
-    	Microsoft Azure development, BizSpark, Hour of Code, relations with students and instructors, attend to professional events
-    </p>
-
-<tr style='mso-yfti-irow:4'>
-  <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
+  
+   
+ <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
   <h1>
-  	Education
+  	Objective
   </h1>
-  </td>
-  <td width=31 valign=top style='width:23.6pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
-  </td>
-  <td width=522 valign=top style='width:391.5pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'><span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
-  </span>
-     <h2>
-     	BFA, University of Washington, Washington, 2015
-     </h2>
-     <p class=MsoNormal>
-     	GPA: 4.0
-     </p>
+ </td>
 
-     <p class=MsoNormal>
-     	Coursework, awards and honors
-     </p>
-    </td>
+<td width=31 valign=top style='width:23.6pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
+</td>
+
+<td width=522 valign=top style='width:391.5pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
+	<p class=MsoNormal>
+		I want to be an expert in Microsoft Azure and C#.
+	</p>
+	<p class=MsoNormal>
+		Now I study at KEA, where I mostly learn about JAVA and Networking. During my studies I hold workshops and events for students
+		about Azure, Hour of Code, etc..
+	</p>
+	<p class=MsoNormal>
+	</p>
+</td>
+
  </tr>
-
 </table>
 
 </div>
