--- a/index.html
+++ b/index.html
@@ -378,7 +378,8 @@ Developing skills: C#, JAVA, JavaScript, Android Game Development
     </p>
   </td>
   
-   
+<tr style='mso-yfti-irow:1'>
+  
  <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
   <h1>
   	Objective
