--- a/index.html
+++ b/index.html
@@ -215,9 +215,12 @@ p.Name, li.Name, div.Name
      	Secondary School, 2005-2009
      </h2>
      <p class=MsoNormal>
-     	Bólyai János Gimnázium és Kereskedelmi Szakközépiskola (Ócsa, Hungary)
+     	Bolyai Janos Gimnazium es Kereskedelmi Szakkozepiskola (Ocsa, Hungary)
      </p>
+     <p class=MsoNormal>
 	English high level graduate, intermediate language exam
+	</p>
+	
      <p class=MsoNormal>
      	IT high level graduate
      </p>
@@ -230,20 +233,23 @@ p.Name, li.Name, div.Name
      <p class=MsoNormal>
      	Faculty of Informatics, System Engineering
      </p>
-	Developing skills: C, C++, Visual Basic, Python, LabView, .NET, PHP, HTML, JAVA
      <p class=MsoNormal>
-     	</p>
-	Measurement and process management specialization
-	<p class=MsoNormal>
-     	
+	Developing skills: C, C++, Visual Basic, Python, LabView, .NET, PHP, HTML, JAVA
      </p>
+     <p class=MsoNormal>
+     	Measurement and process management specialization
+	
+     	</p>
+	
      <h2>
      	KEA - Copenhagen School of Design and Technology (Denmark)
      </h2>
      <p class=MsoNormal>
      	Computer Science
      </p>
+     <p class=MsoNormal>
 Developing skills: C#, JAVA, JavaScript, Android Game Development
+     </p>
      <p class=MsoNormal>
      	Software Design - project management
      </p>
