--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ p.Name, li.Name, div.Name
      	Mathematics high level
      </p>
      <h2>
-     	University of Debrecen, Hungary, 2009
+     	University of Debrecen, Hungary, 2009-2015
      </h2>
      <p class=MsoNormal>
      	Faculty of Informatics, System Engineering
@@ -242,7 +242,7 @@ p.Name, li.Name, div.Name
      	</p>
 	
      <h2>
-     	KEA - Copenhagen School of Design and Technology (Denmark)
+     	KEA - Copenhagen School of Design and Technology (Denmark), 2015-Present
      </h2>
      <p class=MsoNormal>
      	Computer Science
