--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ p.Name, li.Name, div.Name
      	</p>
 	
      <h2>
-     	KEA - Copenhagen School of Design and Technology (Denmark), 2015-Present
+     	KEA - Copenhagen School of Design and Technology (Denmark)
      </h2>
      <p class=MsoNormal>
      	Computer Science
@@ -252,6 +252,35 @@ Developing skills: C#, JAVA, JavaScript, Android Game Development
      </p>
      <p class=MsoNormal>
      	Software Design - project management
+     </p>
+    </td>
+	
+	
+     <h2>
+     	KEA - Copenhagen School of Design and Technology (Denmark)
+     </h2>
+     <p class=MsoNormal>
+     	Computer Science
+     </p>
+     <p class=MsoNormal>
+Developing skills: C#, JAVA, JavaScript, Android Game Development
+     </p>
+     <p class=MsoNormal>
+     	Software Design - project management
+     </p>
+    </td>
+
+ <h2>
+     	KEA - Copenhagen School of Design and Technology (Denmark)
+     </h2>
+     <p class=MsoNormal>
+     	Software Development
+     </p>
+     <p class=MsoNormal>
+Developing skills: C#, JAVA, PHP
+     </p>
+     <p class=MsoNormal>
+     	Software Testing
      </p>
     </td>
  </tr>
@@ -301,6 +330,15 @@ Developing skills: C#, JAVA, JavaScript, Android Game Development
     </p>
     <p class=ResumeText>
     	Microsoft Azure development, BizSpark, Hour of Code, relations with students and instructors, attend to professional events
+    </p>
+<h2>
+     	LicenseWatch A/S
+     </h2>
+    <p class=ResumeText>
+    	01.09.15. - 01.09.16.
+    </p>
+    <p class=ResumeText>
+    	Azure AD, Microsoft server software installation and management
     </p>
 
 
@@ -380,7 +418,7 @@ Developing skills: C#, JAVA, JavaScript, Android Game Development
     	HTML and CSS
     </p>
     <p class=ResumeText>
-    	Updated knowledge about most of the Microsoft software
+    	Up to date knowledge about most of the Microsoft software
     </p>
   </td>
   
