Added new education

--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@ p.Name, li.Name, div.Name
 </p>
 
 <p class=ContactInfo>
-	Dortheavej 17, 2, 10
+	Dunkerquegade 1.
 
 <p class=ContactInfo>
-	Copenhagen NV, Denmark
+	Nordhavn, Denmark
 </p>
 
 <div style='mso-element:para-border-div;border:solid #5C2D91 1.0pt;mso-border-themecolor:accent1;mso-border-alt:solid #5C2D91 .5pt;
@@ -268,7 +268,19 @@ Developing skills: C#, JAVA, PHP
      </p>
     </td>
 	
- 
+  <h2>
+     	Microsoft Certified (Denmark)
+     </h2>
+     <p class=MsoNormal>
+     	Data Science
+     </p>
+     <p class=MsoNormal>
+Developing skills: Python, R, T-SQL
+     </p>
+     <p class=MsoNormal>
+     	AI, ML
+     </p>
+    </td>
  </tr>
 
 
