--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@ p.Name, li.Name, div.Name
 	mso-fareast-language:JA;}
 </style>
 
+
+<p class=ContactInfo>
+	Eva Pardi
+</p>
 <p class=ContactInfo>
 	https://www.hologirl.azurewebsites.net
 </p>
@@ -186,15 +190,13 @@ p.Name, li.Name, div.Name
 
 <p class=ContactInfo>
 	Dunkerquegade 1.
-
-<p class=ContactInfo>
 	Nordhavn, Denmark
 </p>
 
 <div style='mso-element:para-border-div;border:solid #5C2D91 1.0pt;mso-border-themecolor:accent1;mso-border-alt:solid #5C2D91 .5pt;
  mso-border-themecolor:accent1;padding:4.0pt 6.0pt 4.0pt 6.0pt;background:#5C2D91;mso-background-themecolor:accent1;margin-left:.1in;margin-right:.1in'>
 	<p class=Name>
-		Eva Pardi
+		Curriculum Vitae
 	</p>
 </div>
 
@@ -209,26 +211,27 @@ p.Name, li.Name, div.Name
   </td>
   <td width=31 valign=top style='width:23.6pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
   </td>
-  <td width=522 valign=top style='width:391.5pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'><span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
-  </span>
-  <h2>
-     	Secondary School, 2005-2009
+  <td width=522 valign=top style='width:391.5pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
+    <span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
+    </span>
+     <h2>
+     	Bolyai Janos Gimnazium es Kereskedelmi Szakkozepiskola (Hungary), 2005-2009
      </h2>
      <p class=MsoNormal>
-     	Bolyai Janos Gimnazium es Kereskedelmi Szakkozepiskola (Ocsa, Hungary)
+     	Secondary School
      </p>
      <p class=MsoNormal>
 	English high level graduate, intermediate language exam
-	</p>
-	
+     </p>
      <p class=MsoNormal>
      	IT high level graduate
      </p>
      <p class=MsoNormal>
      	Mathematics high level
      </p>
+	  
      <h2>
-     	University of Debrecen, Hungary, 2009-2015
+     	University of Debrecen (Hungary), 2009-2015
      </h2>
      <p class=MsoNormal>
      	Faculty of Informatics, System Engineering
@@ -238,24 +241,23 @@ p.Name, li.Name, div.Name
      </p>
      <p class=MsoNormal>
      	Measurement and process management specialization
+     </p>
 	
-     	</p>
-	
-     <h2>
-     	KEA - Copenhagen School of Design and Technology (Denmark)
+      <h2>
+     	KEA - Copenhagen School of Design and Technology (Denmark), 2015-2016
      </h2>
      <p class=MsoNormal>
      	Computer Science
      </p>
      <p class=MsoNormal>
-Developing skills: C#, JAVA, JavaScript, Android Game Development
+        Developing skills: C#, JAVA, JavaScript, Android Game Development
      </p>
      <p class=MsoNormal>
      	Software Design - project management
      </p>
 	  
 	  <h2>
-     	KEA - Copenhagen School of Design and Technology (Denmark)
+     	KEA - Copenhagen School of Design and Technology (Denmark), 2016-2017
      </h2>
      <p class=MsoNormal>
      	Software Development
@@ -268,7 +270,7 @@ Developing skills: C#, JAVA, PHP
      </p>
 	  
 	  <h2>
-     	Microsoft Certified (Denmark)
+     	Microsoft Certified (Denmark), 2018
      </h2>
      <p class=MsoNormal>
      	Data Science
