--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Developing skills: Python, R, T-SQL
      	Microsoft Student Partner (Budapest, Hungary)
      </h2>
     <p class=ResumeText>
-    	06.05.13. - Present
+    	06.05.13. - 01.07.16
     </p>
     <p class=ResumeText>
     	Windows Insider, Microsoft Azure development, relations with students and instructors, attend to professional events
@@ -325,7 +325,7 @@ Developing skills: Python, R, T-SQL
      	Microsoft Student Partner (Copenhagen, Denmark)
      </h2>
     <p class=ResumeText>
-    	01.02.15. - Present
+    	01.02.15. - 01.07.17.
     </p>
     <p class=ResumeText>
     	Microsoft Azure development, BizSpark, Hour of Code, relations with students and instructors, attend to professional events
@@ -340,11 +340,47 @@ Developing skills: Python, R, T-SQL
     	Azure AD, Microsoft server software installation and management
     </p>
 
-
+ <h2>
+     	Teacher Assistant at KEA (Denmark)
+     </h2>
+    <p class=ResumeText>
+    	01.10.16. - 01.07.2017.
+    </p>
+    <p class=ResumeText>
+    	Professional experiences: Microsoft Azure, Azure SQL, Azure ML, Python
+    </p>
+    <span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
+  	</span>
+	  
+	  
+ <h2>
+     	CTO at Student Book Market (Denmark)
+     </h2>
+    <p class=ResumeText>
+    	01.11.16. - Present
+    </p>
+    <p class=ResumeText>
+    	Professional experiences: Deep Learning and Neural Networks, AI
+    </p>
+	  
+	   <h2>
+     	Software Developer and Data Analyst at Laerdal(Denmark)
+     </h2>
+    <p class=ResumeText>
+    	01.09.17. - Present
+    </p>
+    <p class=ResumeText>
+    	Professional experiences: NodeJS, Azure Storages, PowerBI
+    </p>
+    <span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
+  	</span>
+	  
+    <span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
+  	</span>
 <tr style='mso-yfti-irow:1'>
   <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
   	<h1>
-  		Professional Achievements
+  		Other Certifications
   	</h1>
   </td>
   <td width=31 valign=top style='width:23.6pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-top-alt:solid #5C2D91 .5pt;mso-border-top-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
@@ -405,46 +441,20 @@ Developing skills: Python, R, T-SQL
   mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
   	<span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
   	<p class=ResumeText>
-  		Azure Web Development
+  		Microsoft Azure services (Web Apps, Storages, VMs, Analytics..)
   	</p>
     <p class=ResumeText>
-    	C#
+    	Development Languages: C#, Java, JavaScript, Python, R, T-SQL, HTML, CSS
     </p>
     <p class=ResumeText>
-    	Java
+    	Data Science, AI, ML
     </p>
+		
     <p class=ResumeText>
-    	HTML and CSS
-    </p>
-    <p class=ResumeText>
-    	Up to date knowledge about most of the Microsoft software
+    	AR/VR development
     </p>
   </td>
-  
-<tr style='mso-yfti-irow:1'>
-  
- <td width=119 valign=top style='width:88.9pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
-  <h1>
-  	Objective
-  </h1>
- </td>
-
-<td width=31 valign=top style='width:23.6pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
-</td>
-
-<td width=522 valign=top style='width:391.5pt;border:none;border-bottom:solid #5C2D91 1.0pt;mso-border-bottom-themecolor:accent1;mso-border-bottom-alt:solid #5C2D91 .5pt;mso-border-bottom-themecolor:accent1;padding:.1in 0in .1in 0in'>
-	<p class=MsoNormal>
-		I want to be an expert in Microsoft Azure and C#.
-	</p>
-	<p class=MsoNormal>
-		Now I study at KEA, where I mostly learn about JAVA and Networking. During my studies I hold workshops and events for students
-		about Azure, Hour of Code, etc..
-	</p>
-	<p class=MsoNormal>
-	</p>
-</td>
-
- </tr>
+ 
 </table>
 
 </div>
