--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ Developing skills: Python, R, T-SQL
   	<span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
   	</span>
      <h2>
-     	Webshop Operating Assistant (Budapest, Hungary)
+     	Webshop Operating Assistant (Hungary)
      </h2>
     <p class=ResumeText>
     	01.06.12.-28.02.14.
@@ -311,7 +311,7 @@ Developing skills: Python, R, T-SQL
     <span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
   	</span>
      <h2>
-     	Microsoft Student Partner (Budapest, Hungary)
+     	Microsoft Student Partner (Hungary)
      </h2>
     <p class=ResumeText>
     	06.05.13. - 01.07.16
@@ -322,7 +322,7 @@ Developing skills: Python, R, T-SQL
  	<span style='font-size:10.0pt;line-height:120%;font-family:"Calibri",sans-serif;mso-ascii-theme-font:minor-latin;mso-fareast-font-family:"Times New Roman";mso-fareast-theme-font:minor-fareast;mso-hansi-theme-font:minor-latin;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:minor-bidi;mso-font-kerning:10.0pt;mso-ansi-language:EN-US;mso-fareast-language:JA;mso-bidi-language:AR-SA'>
   	</span>
      <h2>
-     	Microsoft Student Partner (Copenhagen, Denmark)
+     	Microsoft Student Partner (Denmark)
      </h2>
     <p class=ResumeText>
     	01.02.15. - 01.07.17.
@@ -364,7 +364,7 @@ Developing skills: Python, R, T-SQL
     </p>
 	  
 	   <h2>
-     	Software Developer and Data Analyst at Laerdal(Denmark)
+     	Software Developer and Data Analyst at Laerdal (Denmark)
      </h2>
     <p class=ResumeText>
     	01.09.17. - Present
