Fixing blog address

--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@ p.Name, li.Name, div.Name
 	Eva Pardi
 </p>
 <p class=ContactInfo>
-	https://www.hologirl.azurewebsites.net
+	<a href="http://hologirl.azurewebsites.net/">
+ 		http://hologirl.azurewebsites.net/
+ 	</a>
+	
 </p>
 
 <p class=ContactInfo>
