--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ p.Name, li.Name, div.Name
 </p>
 <p class=ContactInfo>
 	<a href="http://hologirl.azurewebsites.net/">
- 		http://hologirl.azurewebsites.net/
+ 		http://codewitheve.azurewebsites.net/
  	</a>
 	
 </p>
@@ -272,6 +272,9 @@ Developing skills: C#, JAVA, PHP
      	Software Testing
      </p>
 	  
+     <p class=MsoNormal>
+	Neural Networks and Deep Learning
+	</p>
 	  <h2>
      	Microsoft Certified (Denmark), 2018
      </h2>
